# Pid_Tof_Trd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang.yml
at_interface/: CMakeLists.txt  PidATLinkDef.h  PidFiller.cpp  PidFiller.hpp  PidTrdMcInput.cpp  PidTrdMcInput.hpp
cmake_modules/: AnalysisTree.cmake  PidConfig.sh.in
docs/: Doxyfile
input/: cuts.root  dEdx_p.jul25.phqmd.auau.12agev.root  dEdx_p.jul25.phqmd.auau.12agev_probabilities.root  test_input.root
interface/: CMakeLists.txt  PidIntLinkDef.h  PidTrdRunGetter.cpp  PidTrdRunGetter.hpp
macro/: RunGetterTof.C  RunGetterTrd.C  fit_botvina12.C  fit_botvina3.C  rootlogon.C
pid_new/: CMakeLists.txt
pid_new/bb/: CMakeLists.txt
pid_new/core/: CMakeLists.txt
pid_new/examples/shine/: CMakeLists.txt  FitBinnedTracks.cpp  FitResultsExplorer.cpp  RunFitShine.cpp
pid_new/model/: CMakeLists.txt
src_tof/: CMakeLists.txt  ConstantsTof.h  ContainerTof.cpp  ContainerTof.h  FitHelper.h  GetterTof.cpp  GetterTof.h  ParticleFit.h  PidLinkDef.h
src_trd/: CMakeLists.txt  ConstantsTrd.h  ContainerTrd.cpp  ContainerTrd.h  GetterTrd.cpp  GetterTrd.h  ParticleProb.cpp  ParticleProb.h  PidTrdLinkDef.h
tasks/: CMakeLists.txt  calculate_mcprob_trd.cpp  create_mcinput_trd.cpp  fill_pid.cpp  run_pid_dcm12.cpp  run_pid_dcm3.cpp
